--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html>
 
 <head>
-	<!-- En-tête de la page -->
 	<meta charset="utf-8" />
-	<title>Test</title>
+	<title>Alyovano Dev</title>
+	<link rel="shortcut icon" href="./img/FaviconDev.png">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-		<!-- Corps de la page --> 
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> 
-		Et ultrices neque ornare aenean euismod elementum nisi quis. Eget est lorem ipsum dolor sit. Arcu bibendum at varius vel pharetra.<br>
-		Faucibus et molestie ac feugiat sed lectus vestibulum.<br>
-	</p>
+	<div id="bigtxt">
+		<h1 id="name">Yovanofski Alexis</h1>
+	</div>	
+
+	<div id="profil" class="frame">
+			<img src="./img/Chat.jpg" alt="Photo de profil" id="profil">
+	</div>
+
+	<div>
+		<h3 id="txt">
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero esse dignissimos odio obcaecati, nulla porro placeat id iusto voluptas vel ex. Quo, itaque. Accusantium illum sint delectus, velit earum cupiditate tempore placeat, labore eaque obcaecati reiciendis perspiciatis pariatur. Ut unde et sequi repellat asperiores sint officia ipsam, sit, nobis recusandae quidem eligendi sunt esse illo deserunt aspernatur accusantium animi? Repellendus laboriosam fugiat, molestias vero minus ut ducimus. Quisquam, deleniti reprehenderit.	
+		</h3>
+	</div>
+
 </body>
 
 </html>
